# lambda_cpp

./: README.md
base/: Dockerfile.ubuntu.pip3.postgresql
lambda/: Dockerfile.ubuntu.lambda  app.py  main
vs/: Dockerfile.ubuntu
vs/testapp/: CMakeLists.txt  CMakePresets.json
vs/testapp/hello/: CMakeLists.txt  hello.cpp  hello.h
vs/testapp/main/: CMakeLists.txt  main.cpp
